# SelfOrganizingMap

./: .gitignore  CMakeLists.txt  Doxyfile  MAKEFILE  README.md  SelfOrganizingMap.sln  SelfOrganizingMap.sln.DotSettings  exmp.xlsx  foo.py  foob.py  inout.cpp  inout.h  inout.hpp  main.cpp  pytestclass.py  som.cpp  som.hpp  som.py  som.ui  som_def.h  startup.cpp  test.set  types.hpp  untitled.ui
Elements.net/: Annotations.cs  App.config  Elements.net.csproj  ExitButton.cs
KohonenMap/: App.config  App.xaml  App.xaml.cs  Bootstrapper.cs  KohonenMap.csproj  MainWindow.xaml  MainWindow.xaml.cs
SelfOrganizinMap.Infrastructure/: SelfOrganizinMap.Infrastructure.vcxproj  SelfOrganizinMap.Infrastructure.vcxproj.filters  feature.h  help.cpp  help.h  inout.cpp  inout.h  set.cpp  setinfo.cpp  types.hpp
SelfOrganizingMap.Api/: SelfOrganizingMap.Api.vcxproj  SelfOrganizingMap.Api.vcxproj.filters  sominfo.h  winapi.cpp  winapi.h
SelfOrganizingMap.Infrastructure/: FileReader.cs  IFileReader.cs  IImportTable.cs  ImportTable.cs  SelfOrganizingMap.Infrastructure.csproj
SelfOrganizingMap.Interfaces/: ISomSettings.cs  ISourceInfo.cs  ITrainDataInfo.cs  SelfOrganizingMap.Interfaces.csproj
SelfOrganizingMap.Model/: App.config  Map.cs  Project.cs  ProjectContext.cs  SelfOrganizingMap.Model.csproj  app.db
SelfOrganizingMap.Net.UnitTests/: App.config  DataIoTest.cs  (+3 more)
SelfOrganizingMap/test/: CMakeLists.txt  gtest.lib  test.cpp
infrastructure/: CMakeLists.txt  feature.cpp  feature.h  help.cpp  help.h  inout.cpp  inout.hpp  set.cpp  set.h  setinfo.cpp  setinfo.h  types.hpp
(+111 files in other folders)
