#cmake_minimum_required(VERSION 3.1)
#project(SomTest)
#
##add_definitions(/EHsc)
#set (CMAKE_CXX_STANDARD 17)
#
#set(SOURCE_FILES test.cpp)
#add_executable(test_run ${SOURCE_FILES})
#
#include_directories(gtest)
#include_directories(../som)
#include_directories(../infrastructure)


#add_subdirectory(../infrastructure)
#add_subdirectory(../som)

#target_link_libraries(som_run som)
#target_link_libraries(som_run infrastructure)
#target_link_libraries(som_run gtest.lib)
